update styles to prevent the edges of the page from being covered by mobile browser controls

--- a/allstyles.css
+++ b/allstyles.css
@@ -2,6 +2,11 @@
     --image-fading-duration: 0.16s;
 }
 
+:root, body {
+    width: 100%;
+    height: 100%;
+}
+
 body {
     margin: 0;
     padding: 0;
