--- a/css/non-map.css
+++ b/css/non-map.css
@@ -2,9 +2,9 @@
     position: fixed;
     top: 0;
     bottom: 0;
+    left: 0;
+    right: 0;
     display: grid;
-    height: 100vh;
-    width: 100vw;
     background: rgba(0,0,0,.2);
     pointer-events: none;
 }
